swagger documentation and return message for requests
