# src/models/project.ts
@@ -25,9 +25,9 @@ export class Project{
     }
 
     async update(project_id:string, project: ProjectData){
-        const {description,due_date,name,start_date,status, manager_id} = project
+        const {description,due_date,name,start_date,status} = project
         await sql`UPDATE projects
-                    SET name = ${name},	description = ${description},	start_date = ${start_date},	due_date = ${due_date},	status = ${status},	manager_id = ${manager_id?? null}
+                    SET name = ${name},	description = ${description},	start_date = ${start_date},	due_date = ${due_date},	status = ${status},	manager_id = ${project.manager_id?? null}
                     WHERE project_id = ${project_id}`
     }
 
